--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "angular-cli-ghpages": "^0.5.2",
+    "angular2-moment": "^1.8.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "gh-pages": "^1.1.0",
+    "moment": "^2.21.0",
     "ng2-nvd3": "^2.0.0",
     "ngx-bootstrap": "^2.0.2",
     "rxjs": "^5.5.6",
